manifest/cdk8s/dist/b.k8s.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: b-greetings-c88fd159
spec: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: b-greetings-c8b73703
  namespace: b-greetings-c88fd159
spec:
  minReadySeconds: 0
  progressDeadlineSeconds: 600
  selector:
    matchLabels:
      cdk8s.io/metadata.addr: b-greetings-c851a6ee
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        cdk8s.io/metadata.addr: b-greetings-c851a6ee
    spec:
      automountServiceAccountToken: false
      containers:
        - env:
            - name: CUSTOMER
              value: B
          image: registry.lab.io:5000/greetings:1.0.0
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthz/live
              port: 8000
              scheme: HTTP
            initialDelaySeconds: 5
          name: greetings-b
          ports:
            - containerPort: 8000
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthz/ready
              port: 8000
              scheme: HTTP
            initialDelaySeconds: 5
          resources:
            limits:
              cpu: 1500m
              memory: 2048Mi
            requests:
              cpu: 1000m
              memory: 512Mi
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: false
            runAsGroup: 1000
            runAsNonRoot: true
            runAsUser: 1000
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext:
        fsGroupChangePolicy: Always
        runAsNonRoot: true
      setHostnameAsFQDN: false
---
apiVersion: v1
kind: Service
metadata:
  name: b-greetings-service-c8edb9d3
  namespace: b-greetings-c88fd159
spec:
  externalIPs: []
  ports:
    - name: http
      port: 8000
      protocol: TCP
      targetPort: 8000
  selector:
    cdk8s.io/metadata.addr: b-greetings-c851a6ee
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-services: greetings
  name: b-greetings-ingress-c80889ab
  namespace: b-greetings-c88fd159
spec:
  rules:
    - host: b.lab.io
      http:
        paths:
          - backend:
              service:
                name: b-greetings-service-c8edb9d3
                port:
                  number: 8000
            path: /
            pathType: Prefix
