manifest/cdk8s/dist/c.k8s.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: c-greetings-c8b137ab
spec: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: c-greetings-c889cec3
  namespace: c-greetings-c8b137ab
spec:
  minReadySeconds: 0
  progressDeadlineSeconds: 600
  selector:
    matchLabels:
      cdk8s.io/metadata.addr: c-greetings-c8fe4a4c
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        cdk8s.io/metadata.addr: c-greetings-c8fe4a4c
    spec:
      automountServiceAccountToken: false
      containers:
        - env:
            - name: CUSTOMER
              value: C
          image: abdofarag/greetings:latest
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthz/live
              port: 8000
              scheme: HTTP
            initialDelaySeconds: 5
          name: greetings-c
          ports:
            - containerPort: 8000
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthz/ready
              port: 8000
              scheme: HTTP
            initialDelaySeconds: 5
          resources:
            limits:
              cpu: 1500m
              memory: 2048Mi
            requests:
              cpu: 1000m
              memory: 512Mi
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: false
            runAsGroup: 1000
            runAsNonRoot: true
            runAsUser: 1000
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext:
        fsGroupChangePolicy: Always
        runAsNonRoot: true
      setHostnameAsFQDN: false
---
apiVersion: v1
kind: Service
metadata:
  name: c-greetings-service-c82ab91b
  namespace: c-greetings-c8b137ab
spec:
  externalIPs: []
  ports:
    - name: http
      port: 8000
      protocol: TCP
      targetPort: 8000
  selector:
    cdk8s.io/metadata.addr: c-greetings-c8fe4a4c
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-services: greetings
  name: c-greetings-ingress-c8e8a5fd
  namespace: c-greetings-c8b137ab
spec:
  rules:
    - host: c.lab.io
      http:
        paths:
          - backend:
              service:
                name: c-greetings-service-c82ab91b
                port:
                  number: 8000
            path: /
            pathType: Prefix
